ecmascript/parser/tests/test262-error-references/fail/5301846f80919b63.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/5301846f80919b63.js:1:21
  |
1 | function *g() { let yield; }
  |                     ^^^^^

